extras añadidos + mas metrica final y reportes